// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Block matches with previous snapshot. 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <input
      css="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],"
      placeholder="Placeholder"
    />
    <div
      css="[object Object],[object Object]"
    />
  </div>
</div>
`;

exports[`TextField Default matches with previous snapshot. 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <input
      css="[object Object],[object Object],[object Object],[object Object],[object Object],,"
      placeholder="Placeholder"
    />
    <div
      css="[object Object],[object Object]"
    />
  </div>
</div>
`;

exports[`TextField Disabled matches with previous snapshot. 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <input
      css="[object Object],[object Object],[object Object],[object Object],[object Object],,"
      disabled=""
      placeholder="Placeholder"
    />
    <div
      css="[object Object],[object Object]"
    />
  </div>
</div>
`;

exports[`TextField Error matches with previous snapshot. 1`] = `
<div>
  <div
    css="[object Object]"
  >
    <input
      css="[object Object],[object Object],[object Object],[object Object],[object Object],,[object Object]"
      placeholder="Placeholder"
    />
    <div
      css="[object Object],[object Object]"
    >
      It's wrong answer
    </div>
  </div>
</div>
`;
